<resources>

    <!-- Start Screen -->
	<string name="start_game_activity">Start Game Screen</string>
	<string name="startGame">Start Game</string>
	<string name="author">Developed by Bruno Yamashita</string>
	<string name="highScore">High Score</string>
	<string name="instructions">Instructions</string>
	<string name="exit">Exit</string>

	<!-- Game Screen -->
    <string name="app_name">Discover The Word</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Discover the Word</string>
    <string name="editField">Write here one letter</string>
    <string name="okButtonText">Try!</string>
    <string name="underlinesStr">xxxxxx</string>
    <string name="wrongLetters">WRONG LETTERS: </string>
    <string name="numberOfErrors">NUMBER OF ERRORS: </string>
	
	<!-- Game Over Screen -->
    <string name="game_over_activity">Game Over</string>
	<string name="you_lost_the_game">You LOSE! Do you want to try again?</string>
	<string name="you_won_the_game">You WON! Would you want to continue?</string>
	<string name="pontuation_text">Pontuation: </string>
	<string name="yes_button">Yes</string>
	<string name="no_button">No</string>    
	
	<!-- Game High Score Screen -->
	<string name="game_high_score_screen">High Score</string>
	<string name="game_high_score_back_to_title">Back to Title</string>
	
	<!-- Dialog High Score Screen -->
	<string name="dialog_text_score_screen">Congratulation! You get a high-score! Please digit your name:</string>
	<string name="ok">OK</string>
	
</resources>